# hr-agents

./: .gitignore  README.md  app.py  demo.py  pyproject.toml  requirements.txt  run.py  run_demo.py  run_isolated.py  run_profiles.py  site_fix.py  start_hr_ats.bat
.streamlit/: config.toml
data/resumes/: alice_johnson.txt
docs/: hr-agents-architecture.md
src/hr_agents/: __init__.py
src/hr_agents/ops/: __init__.py  graph.py  nodes.py  rag.py
src/hr_agents/recruitment/: __init__.py  graph.py  nodes.py  resume_parser.py  scoring.py
src/hr_agents/shared/: __init__.py  db.py  llm.py  mocks.py
