[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hr-agents"
version = "0.1.0"
description = "HR Operations Agent + HR Recruitment ATS Agent — LangGraph StateGraph workflows"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.5.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.2.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hr_agents*"]
